@@ -1,13 +1,11 @@
-package org.ztemplates.test;
+package org.ztemplates.web.standalone;
 
 import org.zclasspath.ZIClassRepository;
 import org.ztemplates.actions.ZActionApplication;
-import org.ztemplates.actions.ZIActionApplicationContext;
-import org.ztemplates.render.ZIRenderApplicationContext;
 import org.ztemplates.render.ZRenderApplication;
 import org.ztemplates.web.application.ZApplication;
 
-public class ZTestApplication
+public class ZTemplatesStandaloneApplication
 {
   public static ZApplication create(ZIClassRepository classRepository) throws Exception
   {
@@ -17,11 +15,10 @@ public class ZTestApplication
 
   public static ZApplication create(ZIClassRepository classRepository, String contextPath) throws Exception
   {
-    ZIActionApplicationContext actionContext = new ZTestApplicationContext(classRepository);
-    ZIRenderApplicationContext renderContext = new ZTestApplicationContext(classRepository);
+    ZTemplatesStandaloneApplicationContext context = new ZTemplatesStandaloneApplicationContext(classRepository);
 
-    ZActionApplication actionApplication = new ZActionApplication(actionContext, classRepository);
-    ZRenderApplication renderApplication = new ZRenderApplication(renderContext, classRepository);
+    ZActionApplication actionApplication = new ZActionApplication(context, classRepository);
+    ZRenderApplication renderApplication = new ZRenderApplication(context, classRepository);
 
     // ZVelocityRenderer.init(renderApplication.getApplicationContext());
 
