@@ -26,7 +26,7 @@ import org.zclasspath.ZIClassRepository;
 import org.ztemplates.render.impl.ZExposedMethodRepository;
 import org.ztemplates.render.impl.ZIExposedMethodRepository;
 import org.ztemplates.render.impl.ZIExposedValue;
-import org.ztemplates.test.ZTestApplication;
+import org.ztemplates.web.standalone.ZTemplatesStandaloneApplication;
 
 public class ZExposedMethodRepositoryTest extends TestCase
 {
@@ -53,7 +53,7 @@ public class ZExposedMethodRepositoryTest extends TestCase
   public void testRootExposeRenderTrue() throws Exception
   {
     ZIClassRepository classRepo = ZClassRepository.create(Pojo1.class.getPackage().getName());
-    ZIExposedMethodRepository repo = new ZExposedMethodRepository(ZTestApplication.create(classRepo).getRenderApplication().getApplicationContext());
+    ZIExposedMethodRepository repo = new ZExposedMethodRepository(ZTemplatesStandaloneApplication.create(classRepo).getRenderApplication().getApplicationContext());
     List<ZIExposedValue> values = repo.getExposedValues(Pojo1.class);
     Map<String, ZIExposedValue> map = new HashMap<String, ZIExposedValue>();
     for (ZIExposedValue val : values)
