@@ -7,9 +7,9 @@ import org.zclasspath.ZClassRepository;
 import org.zclasspath.ZIClassRepository;
 import org.ztemplates.render.impl.ZIWebRenderContext;
 import org.ztemplates.render.impl.ZRenderEngine;
-import org.ztemplates.test.ZTestApplication;
 import org.ztemplates.test.ZTestWebRenderContextFactory;
 import org.ztemplates.web.application.ZApplication;
+import org.ztemplates.web.standalone.ZTemplatesStandaloneApplication;
 
 public class ScriptCycleTest extends TestCase
 {
@@ -22,7 +22,7 @@ public class ScriptCycleTest extends TestCase
   {
     super.setUp();
     ZIClassRepository classRepository = ZClassRepository.create(ScriptCycleTest.class);
-    application = ZTestApplication.create(classRepository);
+    application = ZTemplatesStandaloneApplication.create(classRepository);
   }
 
 
