@@ -9,6 +9,9 @@ snapshot available from [https://oss.sonatype.org/content/repositories/snapshots
 
 __ztemplates-2.5.0-SNAPSHOT (Not yet released)__ 
 
+* ZIFormAction no longer has a type parameter 
+* removed method ZIFormAction.beforeForm because form could be named other than "form" and would require inutile override of beforeForm   
+* added class ZTemplatesRunnable so you can use ztemplates outside a http request, in tests, jobs etc.
 * removed class ZISecureUrlDecorator, specify the complete url now
 * removed ZIFormAction.getForm() because now the field can be accessed directly by the framework 
 * added support for multiple forms in the same action, use ZMatch annotation
